@@ -13,4 +13,4 @@ Depends: maptools
 Suggests:
 	testthat, mapview, RColorBrewer
 Encoding: UTF-8
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
