@@ -1,3 +1,6 @@
+	o percentage yearly shot animals grofwild: 
+		include open-ended ribbons
+	o fix tabs at top of page, include logo  	
 0.2.3
 	o percentage yearly shot animals grofwild: 
 		include dutch month names;
